--- a/style.scss
+++ b/style.scss
@@ -38,8 +38,25 @@ div {
 
 @media only screen and (min-width: 376px) {
   .page-wrapper {
-    display: flex;
-    flex-direction: row;
-    gap: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    // grid-template-rows: repeat(4, 1fr);r
+  }
+
+  .intro {
+    background-color: green;
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+  .main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    background-color: yellow;
+    grid-row: 2;
+    grid-column: 1/4;
+  }
+  .participation {
+    grid-column: 3/4;
   }
 }
