--- a/style.css
+++ b/style.css
@@ -38,6 +38,18 @@ div {
     display: grid;
     -ms-grid-columns: 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+    gap: 25px;
+  }
+  .sidebar {
+    font-size: 1.2em;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+    grid-column: 3/4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1/3;
   }
   .intro {
     background-color: green;
@@ -50,21 +62,46 @@ div {
   .main {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 1fr 1fr;
-        grid-template-columns: 1fr 1fr 1fr;
-    -ms-grid-rows: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 35% 1fr;
+        grid-template-rows: 35% 1fr;
     background-color: yellow;
     -ms-grid-row: 2;
     grid-row: 2;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-column: 1/4;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    grid-gap: 50px;
+    height: 100%;
   }
   .participation {
-    -ms-grid-column: 3;
+    background-color: red;
+    -ms-grid-column: 2;
     -ms-grid-column-span: 1;
-    grid-column: 3/4;
+    grid-column: 2/3;
+  }
+  .requirements {
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+  }
+  .benefits {
+    height: 250px;
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+  footer {
+    border: #2e2929 1px solid;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 3;
+    grid-row: 3;
   }
 }
 /*# sourceMappingURL=style.css.map */
