--- a/style.scss
+++ b/style.scss
@@ -40,7 +40,13 @@ div {
   .page-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    // grid-template-rows: repeat(4, 1fr);r
+    grid-template-rows: 1fr;
+    gap: 25px;
+  }
+  .sidebar {
+    font-size: 1.2em;
+    grid-column: 3/4;
+    grid-row: 1/3;
   }
 
   .intro {
@@ -50,13 +56,49 @@ div {
   }
   .main {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 35% 1fr;
     background-color: yellow;
     grid-row: 2;
-    grid-column: 1/4;
+    grid-column: 1/3;
+    grid-gap: 50px;
+    height: 100%;
   }
   .participation {
-    grid-column: 3/4;
+    background-color: red;
+    grid-column: 2/3;
+  }
+  .requirements {
+    grid-row: 2;
+    grid-column: 2/3;
+  }
+  .benefits {
+    height: 250px;
+    grid-row: 2;
+    grid-column: 1/2;
+  }
+
+  footer {
+    border: #2e2929 1px solid;
+    grid-column: 1;
+    grid-row: 3;
   }
 }
+
+// .page-wrapper {
+//   flex-wrap: wrap;
+//   display: flex;
+//   align-items: flex-start;
+// }
+// #zen-supporting {
+//   display: flex;
+//   flex-direction: column;
+//   flex: 1;
+// }
+// .intro {
+// }
+// .sidebar {
+//   flex: 1;
+//   height: 700px;
+//   flex-direction: column;
+// }
